--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp": "^3.9.0",
     "gulp-file-include": "^0.9.0",
     "gulp-livescript": "^2.4.0",
+    "gulp-sass": "^2.0.1",
     "liveify": "^2.0.0",
     "livescript": "^1.4.0",
     "node-uuid": "^1.4.3",
