--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "browserify": "^10.2.4",
     "browserify-livescript": "0.0.2",
     "del": "^1.2.0",
-    "fs": "0.0.2",
     "glob": "^5.0.10",
     "gulp": "^3.9.0",
     "gulp-file-include": "^0.9.0",
@@ -15,6 +14,7 @@
     "liveify": "^2.0.0",
     "livescript": "^1.4.0",
     "node-uuid": "^1.4.3",
+    "prelude-ls": "^1.1.2",
     "require-dir": "^0.3.0",
     "require-globify": "^1.2.1",
     "vinyl-source-stream": "^1.1.0"
