--- a/package.json
+++ b/package.json
@@ -4,15 +4,13 @@
   "devDependencies": {
     "LiveScript": "^1.3.1",
     "browserify": "^10.2.4",
-    "browserify-livescript": "0.0.2",
+    "browserify-livescript": "^0.1.1",
     "del": "^1.2.0",
     "glob": "^5.0.10",
     "gulp": "^3.9.0",
     "gulp-file-include": "^0.9.0",
     "gulp-livescript": "^2.4.0",
     "gulp-sass": "^2.0.1",
-    "liveify": "^2.0.0",
-    "livescript": "^1.4.0",
     "node-uuid": "^1.4.3",
     "prelude-ls": "^1.1.2",
     "require-dir": "^0.3.0",
