--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "LiveScript": "^1.3.1",
     "browserify": "^10.2.4",
     "browserify-livescript": "^0.1.1",
+    "csv-parse": "^0.1.3",
     "del": "^1.2.0",
     "glob": "^5.0.10",
     "gulp": "^3.9.0",
