--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "glob": "^5.0.10",
     "gulp": "^3.9.0",
     "gulp-file-include": "^0.9.0",
+    "gulp-jade": "^1.0.1",
     "gulp-livescript": "^2.4.0",
     "gulp-sass": "^2.0.1",
     "node-uuid": "^1.4.3",
