--- a/package.json
+++ b/package.json
@@ -18,5 +18,12 @@
     "require-dir": "^0.3.0",
     "require-globify": "^1.2.1",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "chai": "^3.0.0",
+    "chai-as-promised": "^5.1.0",
+    "mocha": "^2.2.5",
+    "q": "^1.4.1",
+    "sinon": "^1.15.4"
   }
 }
