--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "chai": "^3.0.0",
     "chai-as-promised": "^5.1.0",
+    "chai-properties": "^1.2.1",
     "mocha": "^2.2.5",
     "q": "^1.4.1",
     "sinon": "^1.15.4"
